Mon May  9 10:46:36 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_atfork, rb_thread_atfork_before_exec): do
	  nothing unless working fork is available.

	* thread_sync.c (rb_mutex_abandon_all): define only if working
	  fork is available.

	* thread_sync.c (rb_mutex_abandon_keeping_mutexes): ditto.

	* thread_sync.c (rb_mutex_abandon_locking_mutex): ditto.

	* thread_win32.c (gvl_init): never used.

Mon May  9 07:18:06 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/{defines,ruby}.h: need to define function attributes
	  alternatives in defines.h instead of ruby.h, because they are used
	  in oniguruma.h and the header used without including ruby.h at
	  encoding library sources.

Mon May  9 06:30:12 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/ruby.h (CONSTFUNC, PUREFUNC): fixed build errors on
	  non-gcc build environments introduced at r54952.

Mon May  9 02:51:51 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* gc.c (rb_gc_unprotect_logging): throw rb_memerror when it cannot
	  allocate memory. This is pointed out by Facebook's Infer.

	* gc.c (gc_prof_setup_new_record): ditto.

	* regparse.c (parse_regexp): ditto.

	* util.c (MALLOC): use xmalloc and xfree like above.

Mon May  9 02:39:16 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* configure.in: check function attirbute const and pure,
	  and define CONSTFUNC and PUREFUNC if available.
	  Note that I don't add those options as default because
	  it still shows many false-positive (it seems not to consider
	  longjmp).

	* vm_eval.c (stack_check): get rb_thread_t* as an argument
	  to avoid duplicate call of GET_THREAD().

Sun May  8 21:01:14 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/extconf.rb: assume it doesn't have SSLv2 related
	  functions when OPENSSL_NO_SSL2 is defined.
	  Usually openssl's header and the library (libssl) have the same
	  set of functions, but on some environment the library has functions